--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-tailwind/react": "0.3.4",
     "@next-auth/firebase-adapter": "^0.1.2",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^8.8.1",
     "install": "^0.13.0",
     "next": "latest",
@@ -18,7 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-firebase-hooks": "^3.0.4"
+    "react-firebase-hooks": "^3.0.4",
+    "react-to-print": "^2.14.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
