--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@draft-js-plugins/counter": "^4.1.2",
+    "@draft-js-plugins/editor": "^4.1.3",
     "@draft-js-plugins/image": "^4.1.3",
     "@material-tailwind/react": "0.3.4",
     "@next-auth/firebase-adapter": "^0.1.2",
