--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "draftjs-to-html": "^0.9.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.8.1",
+    "firebase-tools": "^11.0.1",
     "format-string-to-html": "^1.0.2",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
